# rucio-dirac-dev

./: .env  README.md  dev_setup.py  docker-compose.yml  env.sh  generate_certificates.sh  openssl_config_ca.cnf  test_utils_dirac.py
.github/workflows/: ci.yml
certs/: 37cc428d.0  dppsuser.p12  generate_certificates.sh  hostcert_dirac-server.key.pem  hostcert_dirac-server.pem  hostcert_fts.key.pem  hostcert_fts.pem  hostcert_rucio-server.certkey.pem  hostcert_rucio-server.key.pem  hostcert_rucio-server.pem  hostcert_rucio-storage-1.key.pem  hostcert_rucio-storage-1.pem  hostcert_rucio-storage-2.key.pem  hostcert_rucio-storage-2.pem  hostcert_rucio-storage-3.key.pem  hostcert_rucio-storage-3.pem  hostcert_rucio-webui.key.pem  hostcert_rucio-webui.pem  openssl_config_ca.cnf  test_ca.crl.r0  test_ca.key.pem  test_ca.pem  test_ca.srl  user.certkey.pem  user.key.pem  user.p12  user.pem
certs/ssh/: diracuser_sshkey  diracuser_sshkey.pub
docker/clients/: Dockerfile
docker/cvmfs/stratum0/: Dockerfile
docker/dirac/ce/: Dockerfile  default.local  entrypoint.sh  testvo.conf  testvo.example.org.conf
docker/dirac/server/: Dockerfile  (+5 more)
docker/rucio/: Dockerfile
policy/: pyproject.toml
policy/src/dirac_rucio_policy/: __init__.py  algorithms.py  schema.py
policy/src/dirac_rucio_policy/tests/: test_algorithms.py  test_schema.py
rucio/: daemon_env  rucio.cfg  rucio_dirac_user.cfg  setup_certificates.sh  setup_rucio.sh
tests/: conftest.py  test_basic_rucio_functionality.py  test_dirac_basic.py  test_dirac_rucio_catalog.py  test_replication.py  test_rucio_metadata.py
