[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac-rucio-policy"
version = "0.1.0"
description = "rucio policy package for dirac integration"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Maximilian Linhoff", email = "maximilian.linhoff@tu-dortmund.de"},
]

requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
all = ["dirac-rucio-policy[test]"]

[tool.setuptools.packages.find]
where = ["src"]
